- Fixed Legacy Texture Pack Missing pack.mcmeta
- Fixed F/A Operator Items Without Operater Permissions Showing Up
- Fixed Academy Placement
- Fixed Pregnant Animals Not Becoming the Correct Animal Upon Returning To None Pregnant Variant
- Fixed Impregnation of Baby Animals
- Fixed Insta-Births
- Fixed Stegosaurus Tail Texture Issue
- Fixed Velociraptor Interactions
- SyringeAnimals Has Been Replaced With PregnancyType and It Can Be Expanded On
- Fix Untranslated Strings for Pregnanant Animals
- Added Holes to Academies
Experimental:
- Added Prehistoric Dimension
- Update Time Machine Interface
- Added Carnotaurus
- Added Cryolophosaurus
- Added Therizinosaurus
- Added Carnotaurus DNA
- Added Cryolophosaurus DNA
- Added Therizinosaurus DNA
- Added Carnotaurus Egg
- Added Cryolophosaurus Egg
- Added Therizinosaurus Egg
- Added Raw Carnotaurus Meat
- Added Raw Cryolophosaurus Meat
- Added Raw Therizinosaurus Meat
- Added Cooked Carnotaurus Meat
- Added Cooked Cryolophosaurus Meat
- Added Cooked Therizinosaurus Meat
21/4/2024
- Multiloader Restructure
- Fixed Time Machine not having a loot table
17/4/2024
- Added Triceratops
- Added Velociraptor
- Added Tyrannosaurus
- Added Pterandon
- Added Nautilus
- Added Futabasaurus
- Added Mosasaurus
- Added Stegosaurus
- Added Dilophosaurus
- Added Brachiosaurus
- Added Mammoth
- Added Smilodon
- Added Failuresaurus
- Added Anu
- Added Tamed Zombified Piglin
- Added Smilodon
- Added Fossil
- Added DNA for 12 Prehistoric Creatures and other Minecraft Creatures
- Added Eggs for 10 Prehistoric Creatures
- Added Meats for 12 Prehistoric Creatures
- Added Syringes for 2 Prehistoric Creatures and other Minecraft Creatures
- Added Tyrannosaurus Rex Tooth
- Added Tooth Dagger
- Added Skull Stick
- Added Dinopedia
- Added Chicken Soup
- Added Chicken Essence
- Added Nautilus Shell
- Added Magic Conch
- Added Frozen Meat
- Added Jurassic Fern Spores
- Added Relic Scrap
- Added Stone Tablet
- Added Ancient Sword Artifact