@@ -9,6 +9,7 @@
 - Fixed Insta-Births
 - Fixed Stegosaurus Tail Texture Issue
 - Fixed Velociraptor Interactions
+- Weapon Shops Now Generate Closer to The Surface
 - SyringeAnimals Has Been Replaced With PregnancyType and It Can Be Expanded On
 - Fix Untranslated Strings for Pregnanant Animals
 - Added Holes to Academies
